--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,7 @@ dependencies {
     //xpopup
     implementation 'com.lxj:xpopup:1.7.10'
     implementation 'com.android.support:design:28.0.0'
+    //glide
+//    implementation 'com.github.bumptech.glide:glide:4.5.0'
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
 }
