--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,11 @@ dependencies {
     //xpopup
     implementation 'com.lxj:xpopup:1.7.10'
     implementation 'com.android.support:design:28.0.0'
+    //gson
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation files('libs\\TypeBuilder-1.0.jar')
+    implementation files('libs\\poi-3.15.jar')
+    implementation files('libs\\poi-scratchpad-3.15.0.jar')
     //glide
 //    implementation 'com.github.bumptech.glide:glide:4.5.0'
 //    annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
